# Copyright 2024 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_cdc_bit_toggle",
    srcs = ["br_cdc_bit_toggle.sv"],
    deps = [
        "//gate/rtl:br_gate_behav",
        "//macros:br_asserts",
        "//macros:br_registers",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_bit_toggle_test_suite",
    params = {
        "NumStages": [
            "2",
            "3",
        ],
        "AddSourceFlop": [
            "0",
            "1",
        ],
    },
    deps = [":br_cdc_bit_toggle"],
)
