# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_cdc_pkg",
    srcs = ["br_cdc_pkg.sv"],
)

verilog_library(
    name = "br_cdc_bit_toggle",
    srcs = ["br_cdc_bit_toggle.sv"],
    deps = [
        # Omitting //gate/rtl:br_gate_mock so that downstream targets (which may exist in another repo)
        # can decide whether to use these behavioral models or swap them out for some other vendor models.
        # Downstream targets should decide whether to add the //gate/rtl:br_gate_mock dependency themselves.
        "//macros:br_asserts_internal",
        "//macros:br_gates",
        "//macros:br_registers",
        ":br_cdc_pkg",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_bit_toggle_test_suite",
    params = {
        "NumStages": [
            "2",
            "3",
        ],
        "AddSourceFlop": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_bit_toggle",
    deps = [
        ":br_cdc_bit_toggle",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_fifo_ctrl_1r1w",
    srcs = ["br_cdc_fifo_ctrl_1r1w.sv"],
    deps = [
        ":br_cdc_fifo_ctrl_pop_1r1w",
        ":br_cdc_fifo_ctrl_push_1r1w",
    ],
)

verilog_library(
    name = "br_cdc_fifo_ctrl_pop_1r1w",
    srcs = ["br_cdc_fifo_ctrl_pop_1r1w.sv"],
    deps = [
        ":br_cdc_bit_toggle",
        "//cdc/rtl/internal:br_cdc_fifo_gray_count_sync",
        "//cdc/rtl/internal:br_cdc_fifo_pop_ctrl",
        "//macros:br_asserts_internal",
        "//macros:br_gates",
    ],
)

verilog_library(
    name = "br_cdc_fifo_ctrl_push_1r1w",
    srcs = ["br_cdc_fifo_ctrl_push_1r1w.sv"],
    deps = [
        ":br_cdc_bit_toggle",
        "//cdc/rtl/internal:br_cdc_fifo_gray_count_sync",
        "//cdc/rtl/internal:br_cdc_fifo_push_ctrl",
        "//macros:br_asserts_internal",
    ],
)

verilog_library(
    name = "br_cdc_fifo_ctrl_push_1r1w_push_credit",
    srcs = ["br_cdc_fifo_ctrl_push_1r1w_push_credit.sv"],
    deps = [
        ":br_cdc_bit_toggle",
        "//cdc/rtl/internal:br_cdc_fifo_gray_count_sync",
        "//cdc/rtl/internal:br_cdc_fifo_push_ctrl_credit",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_fifo_ctrl_1r1w_test_suite",
    params = {
        "Depth": [
            "5",
            "8",
        ],
        "Width": ["8"],
        "RamWriteLatency": [
            "1",
            "2",
        ],
        "RamReadLatency": [
            "0",
            "1",
            "2",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_fifo_ctrl_1r1w",
    deps = [
        ":br_cdc_fifo_ctrl_1r1w",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_fifo_ctrl_1r1w_push_credit",
    srcs = ["br_cdc_fifo_ctrl_1r1w_push_credit.sv"],
    deps = [
        ":br_cdc_fifo_ctrl_pop_1r1w",
        ":br_cdc_fifo_ctrl_push_1r1w_push_credit",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_fifo_ctrl_1r1w_push_credit_test_suite",
    params = {
        "Depth": [
            "5",
            "8",
        ],
        "Width": ["8"],
        "RamWriteLatency": [
            "1",
            "2",
        ],
        "RamReadLatency": [
            "0",
            "1",
            "2",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_fifo_ctrl_1r1w_push_credit",
    deps = [
        ":br_cdc_fifo_ctrl_1r1w_push_credit",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_fifo_flops",
    srcs = ["br_cdc_fifo_flops.sv"],
    deps = [
        ":br_cdc_fifo_ctrl_1r1w",
        "//ram/rtl:br_ram_flops",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_fifo_flops_test_suite",
    params = {
        "Depth": [
            "5",
            "8",
        ],
        "Width": ["8"],
        "FlopRamAddressDepthStages": [
            "0",
            "1",
        ],
        "EnableStructuredGatesDataQualification": [
            "0",
            "1",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_fifo_flops",
    deps = [
        ":br_cdc_fifo_flops",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

verilog_library(
    name = "br_cdc_fifo_flops_push_credit",
    srcs = ["br_cdc_fifo_flops_push_credit.sv"],
    deps = [
        ":br_cdc_fifo_ctrl_1r1w_push_credit",
        "//ram/rtl:br_ram_flops",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_fifo_flops_push_credit_test_suite",
    params = {
        "Depth": [
            "5",
            "8",
        ],
        "Width": ["8"],
        "FlopRamAddressDepthStages": [
            "0",
            "1",
        ],
        "EnableStructuredGatesDataQualification": [
            "0",
            "1",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_fifo_flops_push_credit",
    deps = [
        ":br_cdc_fifo_flops_push_credit",
        "//gate/rtl:br_gate_mock",
        "//mux/rtl:br_mux_bin_structured_gates_mock",
    ],
)

verilog_library(
    name = "br_cdc_rst_sync",
    srcs = ["br_cdc_rst_sync.sv"],
    deps = [
        # Omitting //gate/rtl:br_gate_mock so that downstream targets (which may exist in another repo)
        # can decide whether to use these behavioral models or swap them out for some other vendor models.
        # Downstream targets should decide whether to add the //gate/rtl:br_gate_mock dependency themselves.
        "//macros:br_asserts",
        "//macros:br_gates",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_rst_sync_test_suite",
    params = {
        "NumStages": [
            "2",
            "3",
        ],
    },
    top = "br_cdc_rst_sync",
    deps = [
        ":br_cdc_rst_sync",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_bit_pulse",
    srcs = ["br_cdc_bit_pulse.sv"],
    deps = [
        ":br_cdc_bit_toggle",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_bit_pulse_test_suite",
    params = {
        "NumStages": [
            "2",
            "3",
        ],
        "RegisterOutput": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_bit_pulse",
    deps = [
        ":br_cdc_bit_pulse",
        "//gate/rtl:br_gate_mock",
    ],
)

verilog_library(
    name = "br_cdc_reg",
    srcs = ["br_cdc_reg.sv"],
    deps = [
        ":br_cdc_bit_toggle",
        "//cdc/rtl/internal:br_cdc_reg_pop",
        "//cdc/rtl/internal:br_cdc_reg_push",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_cdc_reg_test_suite",
    params = {
        "Width": [
            "8",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
        "RegisterResetActive": [
            "0",
            "1",
        ],
    },
    top = "br_cdc_reg",
    deps = [
        ":br_cdc_reg",
        "//gate/rtl:br_gate_mock",
    ],
)
